created a component that displays the news (beta)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,47 @@
     <body>
         <div id='root'></div>
         <script type="text/babel">
-            let city="London";
+            const Hello = ({username}) => {
+                return(
+                    <div className="heading">
+                        <h1>Hello, {username}!</h1>
+                    </div>
+                )
+            };
+
+            const News = ({category, headline}) => <p><b>{category}</b>: <i>{headline}</i></p>;
+
+            const endList = [{id: 1, category: "Holidays", headline: "Ideal holiday quiz!"},
+                            {id: 2, category: "Travel", headline: "Bali - the cheap hidden gem of the East"},
+                            {id: 3, category: "Hobbies", headline: "10 things to make that are not banana bread"}
+            ]
+
+            const weekList = [{id: 1, category: "Economics", headline: "Bitcoin fluctuation like never before!"},
+                              {id: 2, category: "Health", headline: "The effects of eating 5-a-day."},
+                              {id: 3, category: "Transport", headline: "Expect tube closures this week on Circle."}
+            ]
+
+            const NewsFeed = ({weekend, endList, weekList}) => (
+                <div>
+                    {weekend ? 
+                        <ul>
+                            {endList.map((elem) =>
+                                <li key={elem.id}><News category={elem.category} headline={elem.headline}/></li>
+                            )}
+                        </ul>
+                        :
+                        <ul>
+                            {weekList.map((elem, i) =>
+                                <li key={elem.id}><News category={elem.category} headline={elem.headline}/></li>
+                            )}
+                        </ul>                    
+                    }
+                </div>
+            );
+
             ReactDOM.render(
-                <h1 className="heading">Hello {city}!</h1>,  
+                //<Hello username="Miruna" />
+                <NewsFeed weekend={true} endList={endList} weekList={weekList} />, 
                 document.getElementById("root")
             );
         </script>
