New changes to navbar, welcome, and structure tree

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <script src="https://kit.fontawesome.com/b69e01d411.js" crossorigin="anonymous"></script>
 
     <script>var Alert = ReactBootstrap.Alert;</script>
+    <!-- React MDL -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
